--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "exercise1_feel_state",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "6.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
